# amigo_ref_interpolator

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
include/amigo_ref_interpolator/: interpolator.h
src/: interpolator.cpp
